DD-18 responsive daily demand percentage bars (WiP)

--- a/src/components/Content/selectedProducts.css
+++ b/src/components/Content/selectedProducts.css
@@ -71,3 +71,11 @@ button {
   max-width: fit-content;
   padding: 1rem;
 }
+
+#diary-calory-header {
+  display: flex;
+}
+
+#diary-kcal-demand {
+  font-weight: bolder;
+}
